[TDD] - 25 일부 정리

--- a/tdd-study/25.md
+++ b/tdd-study/25.md
@@ -1,2 +1,52 @@
 # 25장-테스트 주도 개발 패턴
 
+어떻게 테스트 할 것인가?
+
+- 테스트한다는 것은 무엇?
+- 테스트는 언제하지?
+- 테스트 로직은 어떻게 고르지?
+- 테스트할 데이터는 어떻게 고르지?
+
+## 테스트 - 명사
+
+- 작성한 소프트웨어를 어떻게 테스트 할 것인가?
+  - => 자동화된 테스트를 만들어라.
+
+- test => 평가하다(동사)
+  - '변화를 테스트할 수 있다' ≠ '테스트를 갖고 있다'
+
+- test => `승인`이나 `거부`에 도달하는 과정
+
+- '명사 테스트'와 '동사 테스트'는 다른 느낌을 줌 -> `왜그럴까`
+  - 명사 테스트 = 자동으로 실행되는 과정
+  - 동사 테스트 = 버튼을 눌러보고 화면의 결과를 주시
+
+### Quality Software Management - 스타일 영향도 (influence diagram)
+
+양성 피드백 고리 (positive feedback loop)
+- 스트레스가 높아지면 테스트를 적게함
+- 테스트 실행을 많이하면 스트레스가 적어짐
+
+```
+              - - - - - >
+----> 스트레스                테스트 실행
+              <- - - - -
+```
+스트레스를 많이 받으면 테스트를 뜸하게 하고, 테스트를 뜸하게 하면 에러는 많아지고, 에러가 많아지면 더 많은 스트레스를 받게되고...
+
+{% hint style="info" %}
+- [ ] 내용은 알겠는데, 고리가 잘 이해가 안감.
+  - 왜 고리를 빠져나올 수 있나
+{% endhint %}
+
+이 고리를 빠져나오려면?
+- 새로운 요소 도입
+- 기존 요소와 바꿔치기
+- 화살표를 바꾸기
+- **현재의 경우** : `테스트`를 `자동화된 테스트`로 치환하면 됨
+
+### 자동화된 테스트?
+
+- 자동화된 테스트가 있다면, 스트레스를 받기 시작할 때 테스트를 실행할 것
+- 테스트는 프로그래머를 위한 묘석 (두려움을 지루함으로 바꿔줌)
+- 스트레스를 많이 받
