--- a/tdd-study/25.md
+++ b/tdd-study/25.md
@@ -49,4 +49,30 @@
 
 - 자동화된 테스트가 있다면, 스트레스를 받기 시작할 때 테스트를 실행할 것
 - 테스트는 프로그래머를 위한 묘석 (두려움을 지루함으로 바꿔줌)
-- 스트레스를 많이 받
+- 스트레스를 많이 받을수록 테스트도 더 많이 실행
+  - 테스트 실행 -> 좋은 느낌 -> 작업중 에러 줄어듬 -> 스트레스 적어짐
+  - 스트레스를 많이 받으면 결국 실패하는데, 자동화된 테스트가 있다면 두려운 정도를 선택할 수 있음
+
+{% hint style="info" %}
+- 트랜잭션을 시작하고 변수를 변경한 후에 트랜잭션이 가비지 컬렉트되도록 둔 경우에 롤백을 어떻게 구현할 것인가?
+  - 트랜잭션 메커니즘이란 결국 트랜잭션이 커밋되기 전까지 변수가 진짜로 변하면 안된다는 것에 있다.
+{% endhint %}
+
+
+- [ ] 자동화된 테스트에 대해 뭔가 더 설명할줄 알았는데 아쉬움;; 여기서 하고자 하는 말이 뭔지 헷갈림
+
+## 격리된 테스트
+
+- 테스트를 실행하는 것은 서로 아무런 영향도 없는것이 좋다.
+
+GUI테스트를 하면서 느낀 교훈
+
+- 테스트는 충분히 빨라서, 내가 직접 자주 실행해야, 내가 만든 에러를 내가 먼저 잡을 수 있다.
+- 어마어마한 양(의 에러)이 반드시 어마어마한 양의 문제를 의미하는 것은 아님 (앞의 테스트의 영향을 받는경우가 있음)
+
+격리된 테스트
+
+- 테스트가 실행순서에 독립적이게 된다는 점
+- 테스트를 격리하기 위한 작업은 *결과적으로* 시스템이 응집도는 높고, 결합도는 낮은 객체의 모음으로 구성되도록 하는것.
+
+## 테스트 목록
