[TDD] 양성피드백 첨언

--- a/tdd-study/25.md
+++ b/tdd-study/25.md
@@ -32,7 +32,15 @@
 ----> 스트레스                테스트 실행
               <- - - - -
 ```
+
 스트레스를 많이 받으면 테스트를 뜸하게 하고, 테스트를 뜸하게 하면 에러는 많아지고, 에러가 많아지면 더 많은 스트레스를 받게되고...
+
+
+{% hint style="info" %}
+양성 피드백[1] 은 시스템의 출력이 입력량을 늘리는 방향으로 진행되는 피드백이다.
+양성 피드백은 결과가 원인을 촉진하는 경우이고, 음성 피드백은 결과가 원인을 억제하는 경우이다.
+{% endhint %}
+
 
 {% hint style="info" %}
 - [ ] 내용은 알겠는데, 고리가 잘 이해가 안감.
