--- a/tdd-study/25.md
+++ b/tdd-study/25.md
@@ -84,3 +84,52 @@ GUI테스트를 하면서 느낀 교훈
 - 테스트를 격리하기 위한 작업은 *결과적으로* 시스템이 응집도는 높고, 결합도는 낮은 객체의 모음으로 구성되도록 하는것.
 
 ## 테스트 목록
+
+뭘 테스트 해야하나?
+
+- 시작하기전에 작성해야할 테스트 목록을 모두 적어둘 것
+- 모든 것을 머릿속에 넣어두고 집중하면, 목표에서는 벗어나지 않지만, 양성피드백 고리에 빠짐
+- 경험이 축절될수록 할일 목록이 많아짐 -> 목록이 많아지면 집중력이 떨어지고 성취도는 낮아짐 -> 성취도 낮아지면 할일목록 많아짐
+- (실생활)`향후 몇시간` 내로 해치워야하는 할일 목록, 주단위, 월단위 목록을 만든다.
+- TDD에서도 이것을 적용:
+  1. **구현해야할 것들에 대한 테스트 목록을 적음**
+  2. 존재하지 않는 오퍼레이션에 대해서는 널버전(아무일도 하지 않음)을 리스트에 적음
+  3. 이 작업을 끝내기전에 반드시 해야할 리팩토링 목록을 적음
+- 테스트 윤곽 뿐 아니라 테스트 전부 구현할 경우의 문제(?)
+  1. 모든 테스트는 리팩토링에 대해 관성을 가짐... (209p 함께보아요) 고칠게 많아도, 이미 늦고 귀찮아서 안바뀐다는 말 같은데...
+  2. 초록막대를 보는 것이 멀다, ~~~> 정신적 문제
+- 신중한 등반가들의 규칙 : `등반할 때 두 다리와 두 팔 중 셋은 항상 고정한다`
+  - 둘 이상을 동시에 움직임은 위험, TDD에서도 마찬가지
+- 작성한 코드들은 새로운 테스트가 필요함을 암시적으로 알려줌, 이 새 테스트는 리팩토링과 마찬가지로 할일 목록에 적어두라.
+
+## 테스트 우선
+
+테스트를 언제 작성하는 것이 좋을까? 테스트 대상이 되는 코드를 작성하기 직전에 작성하는 것이 좋다.
+
+코드를 작성한 후에는 테스트를 만들지 않을 것이다. 기능이 실행되도록 만드는 것이 목표.
+
+양성피드백 고리를 벗어나자:
+테스트를 먼저하면, 스트레스가 줄고 테스트를 더 많이하게 된다.
+
+## Assert 우선
+
+Assert는 언제쓸까? 제일 먼저 쓰고 시작하라!
+
+- 시스템을 개발할 때 무슨 일부터 하는가?
+  - 완료된 시스템이 어떨거라고 알려주는 이야기부터!
+- 특정 기능을 개발할 때 무슨일 부터 하는가?
+  - 기능이 완료되면 통과할 수 있는 테스트부터 작성!
+- 테스트를 개발할 때 무슨 일 부터 하는가?
+  - 완료될 때 통과해야할 단언부터 작성!
+
+## 테스트 데이터
+
+테스트할 때 어떤 데이터를 사용해야하는가?
+테스트를 읽을 때 쉽고 따라가기 좋을 만한 데이터를 사용하라. 테스트 작성에도 청중이 존재한다.
+
+- 데이터 값을 산발하기 위해 산발하지 말 것.214 질문하나 (plus()메서드를 평가할 때 10384+1239123 보다는 1+2를 쓰라는 말이 맞나?)
+- (대안으로는) 실제 세상에서 얻어진 실제 데이터를 사용하는 것
+
+## 명백한 데이터
+
+데이터의 의도를 어떻게 표현할 것인가? 테스트 자체에 예상되는 값과 실제 값을 포함하고 이 둘 사이의 관게를 드러내기 위해 노력하라.
