[TDD] 스터디 내용중 알게된 것 보강

--- a/tdd-study/25.md
+++ b/tdd-study/25.md
@@ -37,14 +37,8 @@
 
 
 {% hint style="info" %}
-양성 피드백[1] 은 시스템의 출력이 입력량을 늘리는 방향으로 진행되는 피드백이다.
+양성 피드백은 시스템의 출력이 입력량을 늘리는 방향으로 진행되는 피드백이다.
 양성 피드백은 결과가 원인을 촉진하는 경우이고, 음성 피드백은 결과가 원인을 억제하는 경우이다.
-{% endhint %}
-
-
-{% hint style="info" %}
-- [ ] 내용은 알겠는데, 고리가 잘 이해가 안감.
-  - 왜 고리를 빠져나올 수 있나
 {% endhint %}
 
 이 고리를 빠져나오려면?
@@ -67,7 +61,8 @@
 {% endhint %}
 
 
-- [ ] 자동화된 테스트에 대해 뭔가 더 설명할줄 알았는데 아쉬움;; 여기서 하고자 하는 말이 뭔지 헷갈림
+- [x] 자동화된 테스트에 대해 뭔가 더 설명할줄 알았는데 아쉬움;; 여기서 하고자 하는 말이 뭔지 헷갈림
+  - 자동화된 테스트 : 테스트의 전 과정을 수동으로 하는 것이 아니라, IDE에서 하는 것처럼 코드를 짜고 버튼을 누르는 등의 행위
 
 ## 격리된 테스트
 
