--- a/tdd-study/26.md
+++ b/tdd-study/26.md
@@ -49,15 +49,13 @@
 - 자동화된 테스트가 더 널리 쓰이게 하려면 어떻게 해야할까? 테스트를 통해 설명을 요청하고 테스트를 통해 설명하라.
 - 하라고 강제하면 안한다, 문제를 설명할 때 테스트를 통해 설명하라.
 
-
-221.p 질문 "자동화 테스트"
-
-
 ## 학습 테스트
 
-223p 잘 이해안감 ..
-
 - 외부 소프트웨어, 패키지의 새로운 기능을 처음 사용해보기전에도 테스트를 통해 잘 돌아가는 것을 확인할 수 있다.
+
+{% hint style="info" %}
+133p, 144p와 관련 repl주도 test와 비슷한 점 (코드를 남겨두지 않는 것)이 있다.
+{% endhint %}
 
 ## 또 다른 테스트
 
